Added the random cardpack!!!

--- a/src/main/resources/assets/csa/lang/en_us.json
+++ b/src/main/resources/assets/csa/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.csa.custom_item": "Rem",
-  "block.csa.custom_block": "Rem_Block"
+  "block.csa.custom_block": "Rem_Block",
+  "item.csa.card_pack": "Pokemon Card Pack",
+  "item.csa.card_1": "Charizard"
 }
